syntax = "proto3";

// имя пакета, в результирующем go-файле это сохраниться
package rpc_news;

option go_package = "../rpc";

/* message FullNew {
    
    int64 ID = 1; // номер записи
    // заголовок публикации
 	string Title =2 ;
     string  Description =3 ;   // содержание публикации
     int64 Time  = 4;           // время публикации
     string Url  = 5;        // ссылка на источник
	int64 Hash =6; //crc64
} */



message ShortNew {
    // номер записи
    int64 ID = 1;
    // заголовок публикации
 	string Title =2 ;
     string  Description =3 ;   // содержание публикации
     int64 Time  = 4;           // время публикации
     string Url  = 5;        // ссылка на источник
     int64 Hash = 6 ;  //Хеш  новости
}

message Forlist {
   uint64 count = 1 ; 
}

message Page{
    uint32 Page  =1;
    uint32 Limit =2;
}
message Id{
    int64 Page =1;
}

 message ArrayShortNews{
    repeated ShortNew Sl = 1;
} 

message Result {
     int32 ret = 1;
     repeated string error =2;
}
// Вспомогательные структуры
enum OrderSORT {
    SORT_DESC = 0;
    SORT_ASC = 1;    
  }
enum FIELD_SORT{
    FIELD_ID =0;
    FIELD_TITLE =1;
    FIELD_DESC = 2;
    FIELD_DATE = 3;
    FIELD_URL = 4;
}

enum OptionSearch {    
    WholeWord = 0;
    WordPart = 1;    
    WordExclude =2;
    WordPartExclude = 3;
}

message optionSort{
    FIELD_SORT Field = 1;
    OrderSORT  Sort =2;
}

message FindWord{
    string Search =1;
    OptionSearch Option = 2;
}

message FilterDate{
    int64 StartDate =1;
    int64 EndDate =2;
}

message Filter {
    FindWord Word =1;
    optionSort Sort =2;
    FilterDate Period =3;
}

service RssService {
    // add news  
    rpc AddNews(stream  ShortNew )returns (Result) {}
    //list news
    rpc List(Forlist) returns (ArrayShortNews) {}       //вернуть список последних новостей  для веб-интефейса
    rpc ListPage(Page) returns (ArrayShortNews) {}      //вернуть  список новостей на странице 
    rpc GetNews (Forlist) returns (ShortNew) {}         //детальная новость 
    rpc Search  (Filter) returns (ArrayShortNews) {}    //поиск по фильтру  
 }